# Paradigms_Assignment3

./: CMakeLists.txt  cezar.cpp  main.cpp
